--- a/benwaonline/gallery/templates/image_upload.html
+++ b/benwaonline/gallery/templates/image_upload.html
@@ -10,7 +10,7 @@
 
 
 {% import 'macros.html' as macros %}
-{% extends "layout_no_sidebar.html" %}
+{% extends "layout.html" %}
 
 {% block sidebar %}
 all benwa tags
