--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,4 +8,9 @@
     "modules/faq",
     "modules/image_upload",
     "modules/recent_comments",
+    "modules/show_post",
+    "modules/sidebar",
+    "modules/gallery",
+    "modules/users",
+    "modules/userinfo",
     "modules";
