--- a/benwaonline/auth/templates/login.html
+++ b/benwaonline/auth/templates/login.html
@@ -9,7 +9,7 @@
 {%- endfor %}
 {% endmacro %}
 
-{% extends "layout_no_sidebar.html" %}
+{% extends "layout.html" %}
 
 {% block content %}
 <div class="faq">
