--- a/benwaonline/front/templates/faq.html
+++ b/benwaonline/front/templates/faq.html
@@ -10,7 +10,7 @@
 {%- endfor %}
 {% endmacro %}
 
-{% extends "layout_no_sidebar.html" %}
+{% extends "layout.html" %}
 {% block content %}
 <div class='faq'>
 {{ display_faq(entries) }}
