--- a/benwaonline/static/css/modules/navbar.css
+++ b/benwaonline/static/css/modules/navbar.css
@@ -1,8 +1,19 @@
-.navbar {
-  grid-area: navbar;
+.l-navbar, .navbar {
   top: 0;
   height: 60px;
-  width: 100%;
+  width: 100%; }
+  @media (min-width: 600px) {
+    .l-navbar, .navbar {
+      height: 80px; } }
+
+#content {
+  top: 0;
+  height: calc(100vh - 60px); }
+  @media (min-width: 600px) {
+    #content {
+      height: calc(100vh - 80px); } }
+
+.navbar {
   position: sticky;
   background-color: #DCDCDC;
   display: flex;
@@ -11,11 +22,14 @@
 
 .menu-wrapper {
   overflow: hidden;
-  padding: 0 20px; }
+  width: 60px;
+  height: 60px;
+  display: flex; }
   @media (min-width: 600px) {
     .menu-wrapper {
       padding: 0 0;
-      display: flex;
+      width: auto;
+      height: auto;
       justify-content: center;
       order: 1;
       flex-grow: 1; } }
@@ -23,7 +37,14 @@
 .menu-button {
   border: none;
   outline: none;
-  cursor: pointer; }
+  cursor: pointer;
+  padding: 0 20px;
+  width: 100%; }
+  .menu-button span {
+    width: 20px;
+    height: 20px; }
+  .menu-button[aria-expanded="true"] {
+    background-color: hotpink; }
   @media (min-width: 600px) {
     .menu-button {
       display: none; } }
@@ -38,8 +59,9 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    background: hotpink;
-    z-index: 1; }
+    background-color: #DCDCDC;
+    z-index: 1;
+    border-bottom: 1px solid #43039A; }
   @media (min-width: 600px) {
     .menu-content-container {
       position: relative;
@@ -49,10 +71,12 @@
 
 .menu-content {
   padding: 12px 16px;
-  text-decoration: none; }
+  text-decoration: none;
+  border-top: 1px solid #43039A; }
   @media (min-width: 600px) {
     .menu-content {
-      padding: 0px 4px; } }
+      padding: 0px 4px;
+      border: none; } }
 
 .logo {
   position: static;
