--- a/benwaonline/static/css/modules/recent_comments.css
+++ b/benwaonline/static/css/modules/recent_comments.css
@@ -1,54 +1,39 @@
-.base-wrapper, .l-wrapper, .l-wrapper-no-sidebar {
-  display: grid;
-  grid-template-rows: 60px auto; }
+.l-navbar {
+  top: 0;
+  height: 60px;
+  width: 100%; }
   @media (min-width: 600px) {
-    .base-wrapper, .l-wrapper, .l-wrapper-no-sidebar {
-      grid-template-rows: 80px auto; } }
+    .l-navbar {
+      height: 80px; } }
 
-.l-wrapper {
-  grid-template-areas: "navbar navbar" "sidebar content";
-  grid-template-columns: 25% auto; }
+#content {
+  top: 0;
+  height: calc(100vh - 60px); }
   @media (min-width: 600px) {
-    .l-wrapper {
-      grid-template-columns: 160px auto;
-      grid-template-rows: 80px auto; } }
+    #content {
+      height: calc(100vh - 80px); } }
 
-.l-wrapper-no-sidebar {
-  grid-template-areas: "navbar" "content"; }
-
-.flex-col, .comments-wrapper {
+.comments-wrapper {
   display: flex;
   flex-direction: column;
   align-content: center;
-  margin-bottom: 100px; }
-
-.text-block-col, .comments-wrapper {
+  margin-bottom: 100px;
   margin-left: auto;
   margin-right: auto;
-  padding: 0px 25px; }
-  .text-block-col h1, .comments-wrapper h1, .text-block-col h2, .comments-wrapper h2, .text-block-col h3, .comments-wrapper h3 {
+  width: 100%;
+  padding: 0 25px;
+  align-items: center; }
+  .comments-wrapper h1, .comments-wrapper h2, .comments-wrapper h3 {
     margin-top: 30px;
     margin-bottom: 15px; }
   @media (min-width: 600px) {
-    .text-block-col, .comments-wrapper {
+    .comments-wrapper {
       padding: 0 35px; } }
 
-.text-block-inner {
-  max-width: 700px;
-  width: 100%; }
-
-.image-block {
-  margin-left: auto;
-  margin-right: auto; }
-
-.comments-wrapper {
-  grid-area: content; }
-
 .comment-wrapper {
-  display: flex;
-  flex: 0 0 100%;
   max-width: 700px;
   width: 100%;
+  display: flex;
   margin-top: 20px;
   margin-bottom: 20px; }
 
