--- a/benwaonline/static/css/style.css
+++ b/benwaonline/static/css/style.css
@@ -61,54 +61,37 @@ p {
       margin-left: auto;
       margin-right: auto; } }
 
-.base-wrapper, .l-wrapper, .l-wrapper-no-sidebar {
-  display: grid;
-  grid-template-rows: 60px auto; }
-  @media (min-width: 600px) {
-    .base-wrapper, .l-wrapper, .l-wrapper-no-sidebar {
-      grid-template-rows: 80px auto; } }
-
-.l-wrapper {
-  grid-template-areas: "navbar navbar" "sidebar content";
-  grid-template-columns: 25% auto; }
-  @media (min-width: 600px) {
-    .l-wrapper {
-      grid-template-columns: 160px auto;
-      grid-template-rows: 80px auto; } }
-
-.l-wrapper-no-sidebar {
-  grid-template-areas: "navbar" "content"; }
-
-.flex-col, .faq, .form-wrapper, .comments-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  margin-bottom: 100px; }
-
-.text-block-col, .faq, .form-wrapper, .comments-wrapper {
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0px 25px; }
-  .text-block-col h1, .faq h1, .form-wrapper h1, .comments-wrapper h1, .text-block-col h2, .faq h2, .form-wrapper h2, .comments-wrapper h2, .text-block-col h3, .faq h3, .form-wrapper h3, .comments-wrapper h3 {
-    margin-top: 30px;
-    margin-bottom: 15px; }
-  @media (min-width: 600px) {
-    .text-block-col, .faq, .form-wrapper, .comments-wrapper {
-      padding: 0 35px; } }
-
-.text-block-inner, .entry-wrapper {
-  max-width: 700px;
-  width: 100%; }
-
-.image-block, .login-block {
-  margin-left: auto;
-  margin-right: auto; }
-
-.navbar {
-  grid-area: navbar;
+.l-navbar, .navbar {
   top: 0;
   height: 60px;
-  width: 100%;
+  width: 100%; }
+  @media (min-width: 600px) {
+    .l-navbar, .navbar {
+      height: 80px; } }
+
+#content {
+  top: 0;
+  height: calc(100vh - 60px); }
+  @media (min-width: 600px) {
+    #content {
+      height: calc(100vh - 80px); } }
+
+.l-navbar, .navbar {
+  top: 0;
+  height: 60px;
+  width: 100%; }
+  @media (min-width: 600px) {
+    .l-navbar, .navbar {
+      height: 80px; } }
+
+#content {
+  top: 0;
+  height: calc(100vh - 60px); }
+  @media (min-width: 600px) {
+    #content {
+      height: calc(100vh - 80px); } }
+
+.navbar {
   position: sticky;
   background-color: #DCDCDC;
   display: flex;
@@ -117,11 +100,14 @@ p {
 
 .menu-wrapper {
   overflow: hidden;
-  padding: 0 20px; }
+  width: 60px;
+  height: 60px;
+  display: flex; }
   @media (min-width: 600px) {
     .menu-wrapper {
       padding: 0 0;
-      display: flex;
+      width: auto;
+      height: auto;
       justify-content: center;
       order: 1;
       flex-grow: 1; } }
@@ -129,7 +115,14 @@ p {
 .menu-button {
   border: none;
   outline: none;
-  cursor: pointer; }
+  cursor: pointer;
+  padding: 0 20px;
+  width: 100%; }
+  .menu-button span {
+    width: 20px;
+    height: 20px; }
+  .menu-button[aria-expanded="true"] {
+    background-color: hotpink; }
   @media (min-width: 600px) {
     .menu-button {
       display: none; } }
@@ -144,8 +137,9 @@ p {
     display: flex;
     flex-direction: column;
     position: absolute;
-    background: hotpink;
-    z-index: 1; }
+    background-color: #DCDCDC;
+    z-index: 1;
+    border-bottom: 1px solid #43039A; }
   @media (min-width: 600px) {
     .menu-content-container {
       position: relative;
@@ -155,10 +149,12 @@ p {
 
 .menu-content {
   padding: 12px 16px;
-  text-decoration: none; }
+  text-decoration: none;
+  border-top: 1px solid #43039A; }
   @media (min-width: 600px) {
     .menu-content {
-      padding: 0px 4px; } }
+      padding: 0px 4px;
+      border: none; } }
 
 .logo {
   position: static;
@@ -189,104 +185,80 @@ p {
       padding: 0 10px;
       order: 2; } }
 
-.base-wrapper, .l-wrapper, .l-wrapper-no-sidebar {
-  display: grid;
-  grid-template-rows: 60px auto; }
-  @media (min-width: 600px) {
-    .base-wrapper, .l-wrapper, .l-wrapper-no-sidebar {
-      grid-template-rows: 80px auto; } }
-
-.l-wrapper {
-  grid-template-areas: "navbar navbar" "sidebar content";
-  grid-template-columns: 25% auto; }
-  @media (min-width: 600px) {
-    .l-wrapper {
-      grid-template-columns: 160px auto;
-      grid-template-rows: 80px auto; } }
-
-.l-wrapper-no-sidebar {
-  grid-template-areas: "navbar" "content"; }
-
-.flex-col, .faq, .form-wrapper, .comments-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  margin-bottom: 100px; }
-
-.text-block-col, .faq, .form-wrapper, .comments-wrapper {
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0px 25px; }
-  .text-block-col h1, .faq h1, .form-wrapper h1, .comments-wrapper h1, .text-block-col h2, .faq h2, .form-wrapper h2, .comments-wrapper h2, .text-block-col h3, .faq h3, .form-wrapper h3, .comments-wrapper h3 {
-    margin-top: 30px;
-    margin-bottom: 15px; }
-  @media (min-width: 600px) {
-    .text-block-col, .faq, .form-wrapper, .comments-wrapper {
-      padding: 0 35px; } }
-
-.text-block-inner, .entry-wrapper {
-  max-width: 700px;
+.l-navbar, .navbar {
+  top: 0;
+  height: 60px;
   width: 100%; }
+  @media (min-width: 600px) {
+    .l-navbar, .navbar {
+      height: 80px; } }
 
-.image-block, .login-block {
-  margin-left: auto;
-  margin-right: auto; }
+#content {
+  top: 0;
+  height: calc(100vh - 60px); }
+  @media (min-width: 600px) {
+    #content {
+      height: calc(100vh - 80px); } }
 
 .faq {
-  grid-area: content; }
-
-.entry-wrapper {
-  flex: 0 0 100%; }
-
-.login-block img {
-  max-width: 100%;
-  height: auto; }
-
-.base-wrapper, .l-wrapper, .l-wrapper-no-sidebar {
-  display: grid;
-  grid-template-rows: 60px auto; }
-  @media (min-width: 600px) {
-    .base-wrapper, .l-wrapper, .l-wrapper-no-sidebar {
-      grid-template-rows: 80px auto; } }
-
-.l-wrapper {
-  grid-template-areas: "navbar navbar" "sidebar content";
-  grid-template-columns: 25% auto; }
-  @media (min-width: 600px) {
-    .l-wrapper {
-      grid-template-columns: 160px auto;
-      grid-template-rows: 80px auto; } }
-
-.l-wrapper-no-sidebar {
-  grid-template-areas: "navbar" "content"; }
-
-.flex-col, .faq, .form-wrapper, .comments-wrapper {
   display: flex;
   flex-direction: column;
   align-content: center;
-  margin-bottom: 100px; }
-
-.text-block-col, .faq, .form-wrapper, .comments-wrapper {
+  margin-bottom: 100px;
   margin-left: auto;
   margin-right: auto;
-  padding: 0px 25px; }
-  .text-block-col h1, .faq h1, .form-wrapper h1, .comments-wrapper h1, .text-block-col h2, .faq h2, .form-wrapper h2, .comments-wrapper h2, .text-block-col h3, .faq h3, .form-wrapper h3, .comments-wrapper h3 {
+  width: 100%;
+  padding: 0 25px;
+  align-items: center; }
+  .faq h1, .faq h2, .faq h3 {
     margin-top: 30px;
     margin-bottom: 15px; }
   @media (min-width: 600px) {
-    .text-block-col, .faq, .form-wrapper, .comments-wrapper {
+    .faq {
       padding: 0 35px; } }
 
-.text-block-inner, .entry-wrapper {
+.entry-wrapper {
   max-width: 700px;
-  width: 100%; }
+  width: 100%;
+  flex: 0 0 100%; }
 
-.image-block, .login-block {
+.login-block {
   margin-left: auto;
   margin-right: auto; }
+  .login-block img {
+    max-width: 100%;
+    height: auto; }
+
+.l-navbar, .navbar {
+  top: 0;
+  height: 60px;
+  width: 100%; }
+  @media (min-width: 600px) {
+    .l-navbar, .navbar {
+      height: 80px; } }
+
+#content {
+  top: 0;
+  height: calc(100vh - 60px); }
+  @media (min-width: 600px) {
+    #content {
+      height: calc(100vh - 80px); } }
 
 .form-wrapper {
-  grid-area: content; }
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  margin-bottom: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  padding: 0 25px; }
+  .form-wrapper h1, .form-wrapper h2, .form-wrapper h3 {
+    margin-top: 30px;
+    margin-bottom: 15px; }
+  @media (min-width: 600px) {
+    .form-wrapper {
+      padding: 0 35px; } }
 
 .upload-form {
   flex: 1;
@@ -325,57 +297,42 @@ fieldset {
   .form-row input, .form-row textarea {
     flex: 2; }
 
-.base-wrapper, .l-wrapper, .l-wrapper-no-sidebar {
-  display: grid;
-  grid-template-rows: 60px auto; }
+.l-navbar, .navbar {
+  top: 0;
+  height: 60px;
+  width: 100%; }
   @media (min-width: 600px) {
-    .base-wrapper, .l-wrapper, .l-wrapper-no-sidebar {
-      grid-template-rows: 80px auto; } }
+    .l-navbar, .navbar {
+      height: 80px; } }
 
-.l-wrapper {
-  grid-template-areas: "navbar navbar" "sidebar content";
-  grid-template-columns: 25% auto; }
+#content {
+  top: 0;
+  height: calc(100vh - 60px); }
   @media (min-width: 600px) {
-    .l-wrapper {
-      grid-template-columns: 160px auto;
-      grid-template-rows: 80px auto; } }
+    #content {
+      height: calc(100vh - 80px); } }
 
-.l-wrapper-no-sidebar {
-  grid-template-areas: "navbar" "content"; }
-
-.flex-col, .faq, .form-wrapper, .comments-wrapper {
+.comments-wrapper {
   display: flex;
   flex-direction: column;
   align-content: center;
-  margin-bottom: 100px; }
-
-.text-block-col, .faq, .form-wrapper, .comments-wrapper {
+  margin-bottom: 100px;
   margin-left: auto;
   margin-right: auto;
-  padding: 0px 25px; }
-  .text-block-col h1, .faq h1, .form-wrapper h1, .comments-wrapper h1, .text-block-col h2, .faq h2, .form-wrapper h2, .comments-wrapper h2, .text-block-col h3, .faq h3, .form-wrapper h3, .comments-wrapper h3 {
+  width: 100%;
+  padding: 0 25px;
+  align-items: center; }
+  .comments-wrapper h1, .comments-wrapper h2, .comments-wrapper h3 {
     margin-top: 30px;
     margin-bottom: 15px; }
   @media (min-width: 600px) {
-    .text-block-col, .faq, .form-wrapper, .comments-wrapper {
+    .comments-wrapper {
       padding: 0 35px; } }
 
-.text-block-inner, .entry-wrapper {
-  max-width: 700px;
-  width: 100%; }
-
-.image-block, .login-block {
-  margin-left: auto;
-  margin-right: auto; }
-
-.comments-wrapper {
-  grid-area: content; }
-
 .comment-wrapper {
-  display: flex;
-  flex: 0 0 100%;
   max-width: 700px;
   width: 100%;
+  display: flex;
   margin-top: 20px;
   margin-bottom: 20px; }
 
@@ -392,29 +349,254 @@ fieldset {
     .text {
       padding: 0 35px; } }
 
-.sidebar, .tag-sidebar {
-  grid-area: sidebar; }
+.l-navbar, .navbar {
+  top: 0;
+  height: 60px;
+  width: 100%; }
+  @media (min-width: 600px) {
+    .l-navbar, .navbar {
+      height: 80px; } }
 
-.content, .tag-search, .gallery, .show-benwa, .comments {
-  grid-area: content;
-  display: grid; }
+#content {
+  top: 0;
+  height: calc(100vh - 60px); }
+  @media (min-width: 600px) {
+    #content {
+      height: calc(100vh - 80px); } }
 
-.flex-down, .tag-sidebar, .post-comments, .comments {
+.post-wrapper {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  align-content: center;
+  margin-bottom: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  padding: 0 25px; }
+  .post-wrapper h1, .post-wrapper h2, .post-wrapper h3 {
+    margin-top: 30px;
+    margin-bottom: 15px; }
+  @media (min-width: 600px) {
+    .post-wrapper {
+      padding: 0 35px; } }
 
-.tag-sidebar {
-  padding: 0 10px; }
+.image-wrapper {
+  display: flex;
+  justify-content: center; }
+  .image-wrapper img {
+    padding: 0;
+    max-width: 100vw;
+    height: auto; }
 
-.tag-search .results {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 10px; }
+.post-comments-wrapper text {
+  padding: 0; }
+
+.new-comment-wrapper {
+  margin-top: 10px; }
+
+.like-wrapper {
+  align-self: flex-end; }
+
+.post-tags-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  border: 2px solid hotpink;
+  border-radius: 6px; }
+  .post-tags-wrapper .tag {
+    padding: 4px 6px; }
+
+.sidebar-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  margin: 0 10px; }
+
+.sidebar-menu-content, .tag-menu-content {
+  left: 0;
+  flex-direction: column;
+  flex: 0 0 100%;
+  width: 25vw;
+  display: flex; }
+  @media (min-width: 600px) {
+    .sidebar-menu-content, .tag-menu-content {
+      display: flex;
+      width: 160px; } }
+
+.tag-menu-wrapper h3 {
+  margin-bottom: 15px; }
+
+.tag {
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
+  width: 100%;
+  align-items: center; }
+  .tag span {
+    margin-left: auto;
+    align-self: flex-end; }
+
+.tag-link {
+  overflow: hidden;
+  text-decoration: none; }
+
+.l-navbar, .navbar {
+  top: 0;
+  height: 60px;
+  width: 100%; }
+  @media (min-width: 600px) {
+    .l-navbar, .navbar {
+      height: 80px; } }
+
+#content {
+  top: 0;
+  height: calc(100vh - 60px); }
+  @media (min-width: 600px) {
+    #content {
+      height: calc(100vh - 80px); } }
+
+.gallery-wrapper {
+  top: 0;
+  height: calc(100vh - 60px);
+  display: flex;
+  align-content: center; }
+  @media (min-width: 600px) {
+    .gallery-wrapper {
+      height: calc(100vh - 80px); } }
 
 .gallery {
-  grid-template-columns: repeat(auto-fill, 150px);
-  grid-template-rows: repeat(auto-fill, 150px); }
+  top: 0;
+  height: calc(100vh - 60px);
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1; }
+  @media (min-width: 600px) {
+    .gallery {
+      height: calc(100vh - 80px); } }
 
-.comments h3 {
+.post {
+  padding: 0;
+  max-width: 50%;
+  height: auto; }
+
+.post-image {
+  padding: 0;
+  max-width: 100%;
+  height: auto; }
+
+.l-navbar, .navbar {
+  top: 0;
+  height: 60px;
+  width: 100%; }
+  @media (min-width: 600px) {
+    .l-navbar, .navbar {
+      height: 80px; } }
+
+#content {
+  top: 0;
+  height: calc(100vh - 60px); }
+  @media (min-width: 600px) {
+    #content {
+      height: calc(100vh - 80px); } }
+
+.users {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  margin-bottom: 100px;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  width: 100%;
+  padding: 0 25px; }
+  .users h1, .users h2, .users h3 {
+    margin-top: 30px;
+    margin-bottom: 15px; }
+  @media (min-width: 600px) {
+    .users {
+      padding: 0 35px; } }
+
+.users-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px; }
+
+.user-row {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px; }
+
+.l-navbar, .navbar {
+  top: 0;
+  height: 60px;
+  width: 100%; }
+  @media (min-width: 600px) {
+    .l-navbar, .navbar {
+      height: 80px; } }
+
+#content {
+  top: 0;
+  height: calc(100vh - 60px); }
+  @media (min-width: 600px) {
+    #content {
+      height: calc(100vh - 80px); } }
+
+.userstats {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  margin-bottom: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  padding: 0 25px;
+  align-items: center; }
+  .userstats h1, .userstats h2, .userstats h3 {
+    margin-top: 30px;
+    margin-bottom: 15px; }
+  @media (min-width: 600px) {
+    .userstats {
+      padding: 0 35px; } }
+
+.user-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  margin-bottom: 100px; }
+
+.contains-images {
+  display: flex; }
+
+.l-navbar, .navbar {
+  top: 0;
+  height: 60px;
+  width: 100%; }
+  @media (min-width: 600px) {
+    .l-navbar, .navbar {
+      height: 80px; } }
+
+#content {
+  top: 0;
+  height: calc(100vh - 60px); }
+  @media (min-width: 600px) {
+    #content {
+      height: calc(100vh - 80px); } }
+
+.tag-search {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  margin-bottom: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  padding: 0 25px; }
+  .tag-search h1, .tag-search h2, .tag-search h3 {
+    margin-top: 30px;
+    margin-bottom: 15px; }
+  @media (min-width: 600px) {
+    .tag-search {
+      padding: 0 35px; } }
+  .tag-search .results {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px; }
