--- a/benwaonline/templates/navbar.html
+++ b/benwaonline/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav class='navbar'>
     <div class="menu-wrapper">
-        <button class="menu-button" id='menu-button'>+</button>
-        <div class="menu-content-container" id='dropdown' aria-expanded="false">
+        <button class="menu-button" id='nav-menu-button' aria-expanded="false" data-hook='nav-menu-toggle'>+</button>
+        <div class="menu-content-container" id='nav-menu' aria-expanded="false" data-hook="nav-menu-content">
             <a href="{{ url_for('gallery.show_posts') }}" class="menu-content">benwas</a>
             <a href="{{ url_for('tags.show_tags') }}" class="menu-content">tags</a>
             <a href="{{ url_for('userinfo.show_users') }}" class="menu-content">benwusers</a>
@@ -15,8 +15,8 @@
     </div>
 
     <div class='logo'>
-    <img class="logo-image" alt="benwa_online_logo" src="{{ url_for('static', filename='logo.svg') }}">
-    <div class='logo-text'><h3>Benwa <i>Online</i></h3></div>
+        <img class="logo-image" alt="benwa_online_logo" src="{{ url_for('static', filename='logo.svg') }}">
+        <div class='logo-text'><h3>Benwa <i>Online</i></h3></div>
     </div>
 
     <div class="login">
