--- a/benwaonline/templates/scripts.html
+++ b/benwaonline/templates/scripts.html
@@ -1,2 +1,2 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-{% assets "scripts" %}<script src="{{ ASSET_URL }}"></script>{% endassets %}
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+{% assets "scripts" %}<script type="text/javascript" src="{{ ASSET_URL }}"></script>{% endassets %}
