--- a/scss/modules/faq.scss
+++ b/scss/modules/faq.scss
@@ -2,18 +2,18 @@
 @import '../layouts';
 
 .faq {
-    @extend .flex-col;
-    @extend .text-block-col;
-    grid-area: content;
+    @include flex-col;
+    @include text-block-col;
+    align-items: center;
 }
 
 .entry-wrapper {
-    @extend .text-block-inner;
+    @include text-block-inner;
     flex: 0 0 100%;
 }
 
 .login-block {
-    @extend .image-block;
+    @include image-block;
     img {
         max-width: 100%;
         height: auto;
