--- a/scss/modules/navbar.scss
+++ b/scss/modules/navbar.scss
@@ -1,11 +1,9 @@
 @import '../mixins';
+@import '../layouts';
 @import '../site-settings';
 
 .navbar {
-    grid-area: navbar;
-    top: 0;
-    height: 60px;
-    width: 100%;
+    @extend .l-navbar;
     position: sticky;
     background-color: $bg-color;
     display: flex;
@@ -15,11 +13,15 @@
 
 .menu-wrapper {
     overflow: hidden;
-    padding: 0 20px;
+    width: 60px;
+    height: 60px;
+    display: flex;
 
     @include for-tablet-portrait-up {
         padding: 0 0;
-        display: flex;
+        width: auto;
+        height: auto;
+        // display: flex;
         justify-content: center;
         order: 1;
         flex-grow: 1;
@@ -30,6 +32,21 @@
     border: none;
     outline: none;
     cursor: pointer;
+    padding: 0 20px;
+    width: 100%;
+
+    span {
+        width: 20px;
+        height: 20px;
+    }
+
+    &[aria-expanded="true"] {
+        background-color: hotpink;
+    }
+
+    // &[active='true'] {
+    //     border: none;
+    // }
 
     @include for-tablet-portrait-up {
         display: none;
@@ -47,8 +64,10 @@
         display: flex;
         flex-direction: column;
         position: absolute;
-        background: hotpink;
+        // background: hotpink;
+        background-color: $bg-color;
         z-index: 1;
+        border-bottom: 1px solid $color;
     }
 
     @include for-tablet-portrait-up {
@@ -62,9 +81,11 @@
 .menu-content {
     padding: 12px 16px;
     text-decoration: none;
+    border-top: 1px solid $color;
 
     @include for-tablet-portrait-up {
         padding: 0px 4px;
+        border: none;
     }
 }
 
