--- a/scss/modules/recent_comments.scss
+++ b/scss/modules/recent_comments.scss
@@ -2,16 +2,14 @@
 @import '../layouts';
 
 .comments-wrapper {
-    @extend .flex-col;
-    @extend .text-block-col;
-    grid-area: content;
+    @include flex-col;
+    @include text-block-col;
+    align-items: center;
 }
 
 .comment-wrapper {
+    @include text-block-inner;
     display: flex;
-    flex: 0 0 100%;
-    max-width: 700px;
-    width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
 }
