--- a/benwaonline/templates/layout.html
+++ b/benwaonline/templates/layout.html
@@ -12,6 +12,8 @@ $.hook('nav-menu-toggle').click(function() {
     toggleMenu($.hook('nav-menu-content'));
 });
 </script>
+
+{% include 'footer.html' %}
 {% block scripts %}{% endblock %}
 </html>
 {% endblock %}
