--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
     "mixins",
     "states",
     "base",
-    "layouts",
+    "layouts",  
     "modules/navbar",
     "modules/faq",
     "modules/image_upload",
@@ -13,4 +13,5 @@
     "modules/gallery",
     "modules/users",
     "modules/userinfo",
+    "modules/footer",
     "modules";
