--- a/benwaonline/front/templates/contact.html
+++ b/benwaonline/front/templates/contact.html
@@ -1,15 +1,21 @@
 {% extends "layout.html" %}
 {% block content %}
-<h1>Contact</h1>
-<br>
-<h2>takedown a benwa?</h2>
-see <a href="{{ url_for('front.takedown') }}">takedown</a>
-<br><br>
-<h2>code?</h2>
-<a href="https://github.com/goosechooser/benwaonline">benwaonline</a><br>
-<a href="https://github.com/goosechooser/benwaonline-auth">benwaonline-auth</a><br>
-<a href="https://github.com/goosechooser/benwaonlineapi">benwaonline-api</a><br>
-open a pull request and we'll see what happens
-<br><br>
-
+<div class="boring-stuff">
+<div>
+    <h1>Contact</h1>
+</div>
+<div>
+    <h2>takedown a benwa?</h2>
+    <p>see <a href="{{ url_for('front.takedown') }}">takedown</a></p>
+</div>
+<div>
+    <h2>code?</h2>
+    <p>
+        <a href="https://github.com/goosechooser/benwaonline">benwaonline</a><br>
+        <a href="https://github.com/goosechooser/benwaonline-auth">benwaonline-auth</a><br>
+        <a href="https://github.com/goosechooser/benwaonlineapi">benwaonline-api</a><br>
+        open a pull request and we'll see what happens
+    </p>
+</div>
+</div>
 {% endblock %}
