--- a/benwaonline/static/css/modules/image_upload.css
+++ b/benwaonline/static/css/modules/image_upload.css
@@ -1,30 +1,15 @@
-.l-navbar {
-  top: 0;
-  height: 60px;
-  width: 100%; }
-  @media (min-width: 600px) {
-    .l-navbar {
-      height: 80px; } }
-
-#content {
-  top: 0;
-  height: calc(100vh - 60px); }
-  @media (min-width: 600px) {
-    #content {
-      height: calc(100vh - 80px); } }
-
 .form-wrapper {
   display: flex;
   flex-direction: column;
   align-content: center;
-  margin-bottom: 100px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
   padding: 0 25px; }
   .form-wrapper h1, .form-wrapper h2, .form-wrapper h3 {
-    margin-top: 30px;
     margin-bottom: 15px; }
+  .form-wrapper p {
+    margin-bottom: 1rem; }
   @media (min-width: 600px) {
     .form-wrapper {
       padding: 0 35px; } }
