--- a/benwaonline/static/css/modules/navbar.css
+++ b/benwaonline/static/css/modules/navbar.css
@@ -1,24 +1,15 @@
-.l-navbar, .navbar {
+.navbar {
   top: 0;
   height: 60px;
-  width: 100%; }
-  @media (min-width: 600px) {
-    .l-navbar, .navbar {
-      height: 80px; } }
-
-#content {
-  top: 0;
-  height: calc(100vh - 60px); }
-  @media (min-width: 600px) {
-    #content {
-      height: calc(100vh - 80px); } }
-
-.navbar {
+  width: 100%;
   position: sticky;
   background-color: #DCDCDC;
   display: flex;
   align-items: center;
   justify-content: space-between; }
+  @media (min-width: 600px) {
+    .navbar {
+      height: 80px; } }
 
 .menu-wrapper {
   overflow: hidden;
