--- a/benwaonline/static/css/style.css
+++ b/benwaonline/static/css/style.css
@@ -9,6 +9,16 @@ body, caption, th, td, textarea, select, option, legend, fieldset, h1, h2, h3, h
   padding: 0;
   width: 100%; }
 
+ol, li {
+  max-width: none;
+  margin-bottom: 1rem; }
+  @media (min-width: 767px) {
+    ol, li {
+      width: 100%;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto; } }
+
 textarea {
   background-color: white; }
 
@@ -61,42 +71,18 @@ p {
       margin-left: auto;
       margin-right: auto; } }
 
-.l-navbar, .navbar {
-  top: 0;
-  height: 60px;
-  width: 100%; }
-  @media (min-width: 600px) {
-    .l-navbar, .navbar {
-      height: 80px; } }
-
-#content {
-  top: 0;
-  height: calc(100vh - 60px); }
-  @media (min-width: 600px) {
-    #content {
-      height: calc(100vh - 80px); } }
-
-.l-navbar, .navbar {
-  top: 0;
-  height: 60px;
-  width: 100%; }
-  @media (min-width: 600px) {
-    .l-navbar, .navbar {
-      height: 80px; } }
-
-#content {
-  top: 0;
-  height: calc(100vh - 60px); }
-  @media (min-width: 600px) {
-    #content {
-      height: calc(100vh - 80px); } }
-
 .navbar {
+  top: 0;
+  height: 60px;
+  width: 100%;
   position: sticky;
   background-color: #DCDCDC;
   display: flex;
   align-items: center;
   justify-content: space-between; }
+  @media (min-width: 600px) {
+    .navbar {
+      height: 80px; } }
 
 .menu-wrapper {
   overflow: hidden;
@@ -185,34 +171,19 @@ p {
       padding: 0 10px;
       order: 2; } }
 
-.l-navbar, .navbar {
-  top: 0;
-  height: 60px;
-  width: 100%; }
-  @media (min-width: 600px) {
-    .l-navbar, .navbar {
-      height: 80px; } }
-
-#content {
-  top: 0;
-  height: calc(100vh - 60px); }
-  @media (min-width: 600px) {
-    #content {
-      height: calc(100vh - 80px); } }
-
 .faq {
   display: flex;
   flex-direction: column;
   align-content: center;
-  margin-bottom: 100px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
   padding: 0 25px;
   align-items: center; }
   .faq h1, .faq h2, .faq h3 {
-    margin-top: 30px;
     margin-bottom: 15px; }
+  .faq p {
+    margin-bottom: 1rem; }
   @media (min-width: 600px) {
     .faq {
       padding: 0 35px; } }
@@ -229,33 +200,18 @@ p {
     max-width: 100%;
     height: auto; }
 
-.l-navbar, .navbar {
-  top: 0;
-  height: 60px;
-  width: 100%; }
-  @media (min-width: 600px) {
-    .l-navbar, .navbar {
-      height: 80px; } }
-
-#content {
-  top: 0;
-  height: calc(100vh - 60px); }
-  @media (min-width: 600px) {
-    #content {
-      height: calc(100vh - 80px); } }
-
 .form-wrapper {
   display: flex;
   flex-direction: column;
   align-content: center;
-  margin-bottom: 100px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
   padding: 0 25px; }
   .form-wrapper h1, .form-wrapper h2, .form-wrapper h3 {
-    margin-top: 30px;
     margin-bottom: 15px; }
+  .form-wrapper p {
+    margin-bottom: 1rem; }
   @media (min-width: 600px) {
     .form-wrapper {
       padding: 0 35px; } }
@@ -297,34 +253,19 @@ fieldset {
   .form-row input, .form-row textarea {
     flex: 2; }
 
-.l-navbar, .navbar {
-  top: 0;
-  height: 60px;
-  width: 100%; }
-  @media (min-width: 600px) {
-    .l-navbar, .navbar {
-      height: 80px; } }
-
-#content {
-  top: 0;
-  height: calc(100vh - 60px); }
-  @media (min-width: 600px) {
-    #content {
-      height: calc(100vh - 80px); } }
-
 .comments-wrapper {
   display: flex;
   flex-direction: column;
   align-content: center;
-  margin-bottom: 100px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
   padding: 0 25px;
   align-items: center; }
   .comments-wrapper h1, .comments-wrapper h2, .comments-wrapper h3 {
-    margin-top: 30px;
     margin-bottom: 15px; }
+  .comments-wrapper p {
+    margin-bottom: 1rem; }
   @media (min-width: 600px) {
     .comments-wrapper {
       padding: 0 35px; } }
@@ -349,33 +290,18 @@ fieldset {
     .text {
       padding: 0 35px; } }
 
-.l-navbar, .navbar {
-  top: 0;
-  height: 60px;
-  width: 100%; }
-  @media (min-width: 600px) {
-    .l-navbar, .navbar {
-      height: 80px; } }
-
-#content {
-  top: 0;
-  height: calc(100vh - 60px); }
-  @media (min-width: 600px) {
-    #content {
-      height: calc(100vh - 80px); } }
-
 .post-wrapper {
   display: flex;
   flex-direction: column;
   align-content: center;
-  margin-bottom: 100px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
   padding: 0 25px; }
   .post-wrapper h1, .post-wrapper h2, .post-wrapper h3 {
-    margin-top: 30px;
     margin-bottom: 15px; }
+  .post-wrapper p {
+    margin-bottom: 1rem; }
   @media (min-width: 600px) {
     .post-wrapper {
       padding: 0 35px; } }
@@ -440,42 +366,16 @@ fieldset {
   overflow: hidden;
   text-decoration: none; }
 
-.l-navbar, .navbar {
-  top: 0;
-  height: 60px;
-  width: 100%; }
-  @media (min-width: 600px) {
-    .l-navbar, .navbar {
-      height: 80px; } }
-
-#content {
-  top: 0;
-  height: calc(100vh - 60px); }
-  @media (min-width: 600px) {
-    #content {
-      height: calc(100vh - 80px); } }
-
 .gallery-wrapper {
-  top: 0;
-  height: calc(100vh - 60px);
-  display: flex;
-  align-content: center; }
-  @media (min-width: 600px) {
-    .gallery-wrapper {
-      height: calc(100vh - 80px); } }
+  display: flex; }
 
 .gallery {
-  top: 0;
-  height: calc(100vh - 60px);
   display: flex;
   flex-wrap: wrap;
-  flex: 1; }
-  @media (min-width: 600px) {
-    .gallery {
-      height: calc(100vh - 80px); } }
+  flex: 1 1 auto;
+  align-content: center; }
 
 .post {
-  padding: 0;
   max-width: 50%;
   height: auto; }
 
@@ -484,33 +384,18 @@ fieldset {
   max-width: 100%;
   height: auto; }
 
-.l-navbar, .navbar {
-  top: 0;
-  height: 60px;
-  width: 100%; }
-  @media (min-width: 600px) {
-    .l-navbar, .navbar {
-      height: 80px; } }
-
-#content {
-  top: 0;
-  height: calc(100vh - 60px); }
-  @media (min-width: 600px) {
-    #content {
-      height: calc(100vh - 80px); } }
-
 .users {
   display: flex;
   flex-direction: column;
   align-content: center;
-  margin-bottom: 100px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
   padding: 0 25px; }
   .users h1, .users h2, .users h3 {
-    margin-top: 30px;
     margin-bottom: 15px; }
+  .users p {
+    margin-bottom: 1rem; }
   @media (min-width: 600px) {
     .users {
       padding: 0 35px; } }
@@ -525,34 +410,19 @@ fieldset {
   justify-content: space-between;
   margin-bottom: 10px; }
 
-.l-navbar, .navbar {
-  top: 0;
-  height: 60px;
-  width: 100%; }
-  @media (min-width: 600px) {
-    .l-navbar, .navbar {
-      height: 80px; } }
-
-#content {
-  top: 0;
-  height: calc(100vh - 60px); }
-  @media (min-width: 600px) {
-    #content {
-      height: calc(100vh - 80px); } }
-
 .userstats {
   display: flex;
   flex-direction: column;
   align-content: center;
-  margin-bottom: 100px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
   padding: 0 25px;
   align-items: center; }
   .userstats h1, .userstats h2, .userstats h3 {
-    margin-top: 30px;
     margin-bottom: 15px; }
+  .userstats p {
+    margin-bottom: 1rem; }
   @media (min-width: 600px) {
     .userstats {
       padding: 0 35px; } }
@@ -560,39 +430,70 @@ fieldset {
 .user-wrapper {
   display: flex;
   flex-direction: column;
-  align-content: center;
-  margin-bottom: 100px; }
+  align-content: center; }
 
 .contains-images {
   display: flex; }
 
-.l-navbar, .navbar {
-  top: 0;
-  height: 60px;
-  width: 100%; }
-  @media (min-width: 600px) {
-    .l-navbar, .navbar {
-      height: 80px; } }
+#footer {
+  margin-top: 100px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  overflow: hidden; }
+
+.footer-wrapper {
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+  height: 30px;
+  align-items: center; }
+  .footer-wrapper a {
+    text-decoration: none; }
+
+.mid::before {
+  content: '|';
+  padding: 0 8px; }
+
+.mid::after {
+  content: '|';
+  padding: 0 8px; }
 
 #content {
-  top: 0;
-  height: calc(100vh - 60px); }
+  overflow: hidden;
+  flex: 1 0;
+  min-height: 100%; }
+
+.boring-stuff {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  padding: 0 25px;
+  max-width: 700px;
+  width: 100%; }
+  .boring-stuff h1, .boring-stuff h2, .boring-stuff h3 {
+    margin-bottom: 15px; }
+  .boring-stuff p {
+    margin-bottom: 1rem; }
   @media (min-width: 600px) {
-    #content {
-      height: calc(100vh - 80px); } }
+    .boring-stuff {
+      padding: 0 35px; } }
 
 .tag-search {
   display: flex;
   flex-direction: column;
   align-content: center;
-  margin-bottom: 100px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
   padding: 0 25px; }
   .tag-search h1, .tag-search h2, .tag-search h3 {
-    margin-top: 30px;
     margin-bottom: 15px; }
+  .tag-search p {
+    margin-bottom: 1rem; }
   @media (min-width: 600px) {
     .tag-search {
       padding: 0 35px; } }
