--- a/scss/modules/gallery.scss
+++ b/scss/modules/gallery.scss
@@ -2,23 +2,19 @@
 @import '../layouts';
 
 .gallery-wrapper {
-    @include l-body;
     display: flex;
-    align-content: center;
 }
 
 .gallery {
-    @include l-body;
     display: flex;
     flex-wrap: wrap;
-    flex: 1;
+    flex: 1 1 auto;
+    align-content: center;
 }
 
 .post {
-    padding: 0;
     max-width: 50%;
     height: auto;
-
 }
 
 .post-image {
