these new css changes dont make me sad tho

--- a/benwaonline/front/templates/tos.html
+++ b/benwaonline/front/templates/tos.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
-{% block main %}
+{% block content %}
+<div class="boring-stuff">
 <h2>BenWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA Unlimited Inc. Terms of Service</h2>
 <h3>1. Terms</h3>
 <p>By accessing the website at <a href="http://benwa.online">http://benwa.online</a>, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.</p>
@@ -31,4 +32,5 @@
 <p>BenWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA Unlimited Inc. may revise these terms of service for its website at any time without notice. By using this website you are agreeing to be bound by the then current version of these terms of service.</p>
 <h3>8. Governing Law</h3>
 <p>These terms and conditions are governed by and construed in accordance with the laws of Everywhere and you irrevocably submit to the exclusive jurisdiction of the courts in that State or location.</p>
+</div>
 {% endblock %}
