--- a/benwaonline/gallery/templates/macros.html
+++ b/benwaonline/gallery/templates/macros.html
@@ -1,10 +1,12 @@
 {% macro display_comments(comments) %}
-<ul class=comments>
+<div class="comment">
+
 {% for comment in comments | reverse %}
-    <li> <a href="{{ url_for('userinfo.show_user', user_id=comment.user.id )}}">{{ comment.user.username }} </a> posted comment # {{ comment.id }} on {{ comment.created_on }} {{ display_delete_comment(comment) }} </li>
-    {{ comment.content|safe }}
+    <a href="{{ url_for('userinfo.show_user', user_id=comment.user.id )}}">{{ comment.user.username }} </a> - {{ comment.created_on|datetimeformat }} {{ display_delete_comment(comment) }}</div>
+    <p>{{ comment.content|safe }}</p>
 {% endfor %}
-</ul>
+</div>
+
 {% endmacro %}
 
 {% macro add_comment(post, form) %}
@@ -20,17 +22,21 @@
 {% endmacro %}
 
 {% macro display_tags(tags) %}
-<ul class="tags">
 {% for tag in tags %}
-<li><a href="{{ url_for('gallery.show_posts', tags=tag.name) }}">{{ tag.name }}</a> {{ tag.num_posts }} </li>
+<div class='tag'>
+    <a href="{{ url_for('gallery.show_posts', tags=tag.name) }}" class="tag-link">{{ tag.name }}</a>
+    <span>{{ tag.num_posts }}</span>
+</div>
+
 {% endfor %}
-</ul>
 {% endmacro %}
 
 {% macro display_all_posts(posts) %}
 {% for post in posts %}
+<div class="post">
     <a href="{{ url_for('gallery.show_post', post_id=post.id) }}">
-        <img alt="{{ post.title }}" src="{{ url_for('static', filename=post.preview.filepath) }}"></a>
+    <img class='post-image' alt="{{ post.title }}" src="{{ url_for('static', filename=post.preview.filepath) }}"></a>
+</div>
 {% endfor %}
 {% endmacro %}
 
