--- a/benwaonline/templates/layout.html
+++ b/benwaonline/templates/layout.html
@@ -1,32 +1,19 @@
 {% extends "base.html" %}
 {% block atf %}
-<style>
-.navbar_entry {margin: 5px;}
-.filler{flex-grow:1; text-align:center}
-</style>
-<div class='wrapper'>
-<div class='box header'>
-    <div class='navbar' style="display: flex;">
-        <div><h1>Benwa <i>Online</i></h1></div>
-        <div class='navbar_entry'><a href="{{ url_for('gallery.show_posts') }}">benwas</a></div>
-        <div class="navbar_entry"><a href="{{ url_for('tags.show_tags') }}">tags</a></div>
-        <div class="navbar_entry"><a href="{{ url_for('comments.show_comments') }}">comments</a></div>
-        <div class='navbar_entry'><a href="{{ url_for('userinfo.show_users') }}">benwusers</a></div>
-        <div class='navbar_entry'><a href="{{ url_for('front.faq') }}">fab</a></div>
-        <div class="filler"></div>
-        % if current_user.is_authenticated
-        <div class='navbar_entry'><a href="{{ url_for('gallery.add_post') }}" method="post">add a benwa</a></div>
-        <div class='navbar_entry'>{{ current_user.username }}</div>
-        <div class='navbar_entry'><a href="{{ url_for('authbp.logout') }}">logout</a></div>
-        % else
-        <div class='navbar_entry'><a href="{{ url_for('authbp.authorize_info') }}">login/signup</a></div>
-        % endif
-    </div>
-</div>
-<div class='box sidebar'>{% block sidebar %}{% endblock %}</div>
-<div class='box main'>{% block main %}{% endblock %}</div>
-</div>
+{% include 'navbar.html' %}
+<section id='content'>
+{% block content %}{% endblock %}
+</section>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+{% assets "scripts" %}<script src="{{ ASSET_URL }}"></script>{% endassets %}
+<script>
+$.hook('nav-menu-toggle').click(function() {
+    toggleMenu($.hook('nav-menu-content'));
+});
+</script>
+
+{% include 'footer.html' %}
 {% block scripts %}{% endblock %}
 </html>
 {% endblock %}
