--- a/benwaonline/userinfo/templates/user_posts.html
+++ b/benwaonline/userinfo/templates/user_posts.html
@@ -1,5 +1,5 @@
 {% import 'macros.html' as macros %}
 
 {% extends "layout.html" %}
-{% block sidebar %} {{ macros.display_tags(tags) }} {% endblock %}
-{% block main %} {{ macros.display_all_posts(posts) }} {% endblock %}
+{% include 'sidebar.html' %}
+{% block content %} {{ macros.display_all_posts(posts) }} {% endblock %}
