--- a/benwaonline/static/css/style.css
+++ b/benwaonline/static/css/style.css
@@ -22,7 +22,7 @@ ol, li {
 textarea {
   background-color: white; }
 
-a, h1, h2, h3 {
+h1, h2, h3, h4 {
   color: #43039A; }
 
 body {
@@ -306,7 +306,24 @@ fieldset {
     .post-wrapper {
       padding: 0 35px; } }
 
+.post-info-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  max-width: 700px;
+  width: 100%;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+  .post-info-wrapper h3, .post-info-wrapper h4 {
+    margin-top: 15px;
+    margin-bottom: 15px; }
+
 .image-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
   display: flex;
   justify-content: center; }
   .image-wrapper img {
@@ -314,23 +331,54 @@ fieldset {
     max-width: 100vw;
     height: auto; }
 
-.post-comments-wrapper text {
-  padding: 0; }
+.post-comments-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  max-width: 700px;
+  width: 100%;
+  margin-bottom: 20px; }
+  .post-comments-wrapper h3, .post-comments-wrapper h4 {
+    margin-top: 15px;
+    margin-bottom: 15px; }
+  .post-comments-wrapper text {
+    padding: 0; }
 
 .new-comment-wrapper {
-  margin-top: 10px; }
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  max-width: 700px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto; }
+  .new-comment-wrapper textarea {
+    height: auto; }
 
 .like-wrapper {
   align-self: flex-end; }
 
 .post-tags-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  border: 2px solid hotpink;
-  border-radius: 6px; }
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  max-width: 700px;
+  width: 100%;
+  margin-bottom: 20px; }
+  .post-tags-wrapper h3, .post-tags-wrapper h4 {
+    margin-top: 15px;
+    margin-bottom: 15px; }
+  .post-tags-wrapper .tags {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; }
   .post-tags-wrapper .tag {
-    padding: 4px 6px; }
+    flex: auto;
+    padding: 0 6px;
+    border: 1px solid hotpink;
+    border-radius: 6px;
+    width: auto; }
 
 .sidebar-wrapper {
   display: flex;
