--- a/scss/modules/show_post.scss
+++ b/scss/modules/show_post.scss
@@ -5,25 +5,40 @@
 .post-wrapper {
     @include flex-col;
     @include text-block-col;
+}
 
+@mixin row {
+    @include container-fluid;
+    @include text-block-inner;
+    margin-bottom: 20px;
+
+    h3, h4 {
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
 }
 
 .post-info-wrapper {
-    // @extend .lazy;
+    @include row;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .image-wrapper {
+    @include container-fluid
     display: flex;
+    justify-content: center;
     img {
         padding: 0;
         max-width: 100vw;
         height: auto;
     }
-    justify-content: center;
 
 }
 
 .post-comments-wrapper {
+    @include row;
     text {
         padding: 0;
     }
@@ -31,6 +46,21 @@
 
 .new-comment-wrapper {
     margin-top: 10px;
+    @include container-fluid;
+    @include text-block-inner;
+    margin-left: auto;
+    margin-right: auto;
+
+    textarea {
+        height: auto;
+        // display : block;
+        // resize  : none;
+        // overflow: auto;
+        // border: 0;
+        // vertical-align: top;
+    }
+
+
 }
 
 .like-wrapper {
@@ -38,13 +68,21 @@
 }
 
 .post-tags-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    border: 2px solid hotpink;
-    border-radius: 6px;
+    @include row;
+
+    .tags {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
 
     .tag {
-        padding: 4px 6px;
+        // margin: 0 4px;
+        flex: auto;
+        padding: 0 6px;
+        border: 1px solid hotpink;
+        border-radius: 6px;
+        width: auto;
     }
+
 }
