--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
     "mixins",
     "states",
     "base",
-    "layouts",  
+    "layouts",
     "modules/navbar",
     "modules/faq",
     "modules/image_upload",
@@ -14,4 +14,5 @@
     "modules/users",
     "modules/userinfo",
     "modules/footer",
+    "modules/front",
     "modules";
