--- a/benwaonline/front/templates/front.html
+++ b/benwaonline/front/templates/front.html
@@ -1,55 +1,16 @@
 {% extends "base.html" %}
 {% block atf %}
-<style type="text/css">
-body,div,h1,h2,h3,h4,h5,h6,p,ul,li,dd,dt {
-    margin:0;
-    padding:0;
-}
 
-body {
-    background-attachment: fixed;
-    background-position: 50% 0%;
-    background-repeat: no-repeat;
-    background-image:url({{ url_for('static', filename=bg_img)}});
-}
-
-div#main {
-    background: transparent;
-    text-align: center;
-    position: absolute;
-    top: 28em;
-    left: 0;
-    right: 0;
-}
-
-.frontbox {
-    background: #dcdcdc;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: 50% 0%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 2px 0px;
-    width: 480px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 5px #000;
-}
-
-#frontbox1 {
-    padding-bottom: 5px;
-}
-
-#frontbox3 {
-    font-size: 80%;
-}
+<section id='content' class="front">
+<style>
+    .front {
+        background-image:url({{ url_for('static', filename='front.jpg') }});
+    }
 </style>
-<body>
 <div id='main'>
     <div id='frontbox1' class="frontbox">
         <h1>Benwa <i>Online</i></h1>
-        <div class='links'>
+        <div class='front-links'>
             <a href="{{ url_for('authbp.authorize_info') }}">login/signup</a>
             <a href="{{ url_for('gallery.show_posts') }}">benwas</a>
             <a href="{{ url_for('comments.show_comments') }}">comments</a>
@@ -81,5 +42,5 @@ div#main {
     </div>
 
 </div>
-</body>
+</section>
 {% endblock %}
