--- a/benwaonline/static/css/modules.css
+++ b/benwaonline/static/css/modules.css
@@ -28,7 +28,9 @@
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  padding: 0 25px; }
+  padding: 0 25px;
+  max-width: 700px;
+  width: 100%; }
   .tag-search h1, .tag-search h2, .tag-search h3 {
     margin-bottom: 15px; }
   .tag-search p {
