--- a/benwaonline/gallery/templates/show.html
+++ b/benwaonline/gallery/templates/show.html
@@ -1,4 +1,17 @@
 {% import 'macros.html' as macros %}
+{% macro display_comments(comments) %}
+{% for comment in comments | reverse %}
+<div class="comment">
+    <a href="{{ url_for('userinfo.show_user', user_id=comment.user.id )}}">{{ comment.user.username }} </a> - {{ comment.created_on|datetimeformat }} {{ display_delete_comment(comment) }}</div>
+    <p>{{ comment.content|safe }}</p>
+{% endfor %}
+</div>
+{% endmacro %}
+
+{% macro display_delete_comment(comment) %}
+{% if current_user.is_authenticated and comment.id|string() in current_user.comments %}<a href="{{ url_for('gallery.delete_comment', comment_id=comment.id) }}">X</a>{% endif %}
+{% endmacro %}
+
 {% extends "layout.html" %}
 <!-- {% block sidebar %}
 <div class='tag-sidebar'>
@@ -11,22 +24,26 @@ tags
 
 <div class='image-wrapper'>
 <div class="like-wrapper">
-% if post.id|string in g.user.likes
-<input id="checkBox" type="checkbox" checked>
+% if post.id|string in current_user.likes
+<input id="checkBox" type="checkbox" checked data-hook="like-check">
 % else
-<input id="checkBox" type="checkbox">
+<input id="checkBox" type="checkbox" data-hook="like-check">
 % endif
 </div>
 <img src = "{{ url_for('static', filename=post.image.filepath) }}">
 </div>
 <div class="post-info-wrapper">
+<h4>{{ post.title }}</h4>
 <p>
-{{ post.title }} - <a href="{{ url_for('userinfo.show_user', user_id=post.user.id) }}">{{ post.user.username }}</a> - {{ post.created_on|datetimeformat }}
+posted by <a href="{{ url_for('userinfo.show_user', user_id=post.user.id) }}">{{ post.user.username }}</a></p> <p>{{ post.created_on|datetimeformat }}
 </p>
 </div>
 
 <div class="post-tags-wrapper">
+    <h4>benwa tagged with</h4>
+    <div class="tags">
     {{ macros.display_tags(post.tags) }}
+    </div>
 </div>
 {# {{ macros.post_nav(post) }} #}
 
@@ -34,8 +51,7 @@ tags
 
 
 <div class="post-comments-wrapper">
-<h3>Here what others have to say about these loveableb enwas!</h3>
-<div class="post-comments">
+<h4>Here what others have to say about these loveableb enwas!</h4>
 {{ macros.display_comments(post.comments) }}
 </div>
 
@@ -45,11 +61,10 @@ tags
 {{ macros.add_comment(post, form) }}
 % endif
 </div>
-
 </div>
+
 
 {% endblock %}
 
 {% block scripts %}
-<script>document.getElementById('checkBox').addEventListener('click', handleClick);</script>
 {% endblock %}
