hide like box if not logged in

--- a/benwaonline/gallery/templates/show.html
+++ b/benwaonline/gallery/templates/show.html
@@ -10,7 +10,19 @@
 {% endmacro %}
 
 {% macro display_delete_comment(comment) %}
-{% if current_user.is_authenticated and comment.id|string() in current_user.comments %}<a href="{{ url_for('gallery.delete_comment', comment_id=comment.id) }}">X</a>{% endif %}
+% if current_user.is_authenticated and comment.id|string() in current_user.comments
+<a href="{{ url_for('gallery.delete_comment', comment_id=comment.id) }}">X</a>
+% endif
+{% endmacro %}
+
+{% macro display_like_box() %}
+% if current_user.is_authenticated
+    % if post.id|string in current_user.likes
+    <input id="checkBox" type="checkbox" checked data-hook="like-check">
+    % else
+    <input id="checkBox" type="checkbox" data-hook="like-check">
+    % endif
+% endif
 {% endmacro %}
 
 {% extends "layout.html" %}
@@ -25,11 +37,7 @@ tags
 
 <div class='image-wrapper'>
 <div class="like-wrapper">
-% if post.id|string in current_user.likes
-<input id="checkBox" type="checkbox" checked data-hook="like-check">
-% else
-<input id="checkBox" type="checkbox" data-hook="like-check">
-% endif
+{{ display_like_box() }}
 </div>
 <img src = "{{ url_for('static', filename=post.image.filepath) }}">
 </div>
@@ -47,9 +55,6 @@ posted by <a href="{{ url_for('userinfo.show_user', user_id=post.user.id) }}">{{
     </div>
 </div>
 {# {{ macros.post_nav(post) }} #}
-
-{# wow this sucks #}
-
 
 <div class="post-comments-wrapper">
 <h4>Here what others have to say about these loveableb enwas!</h4>
