--- a/benwaonline/static/css/style.css
+++ b/benwaonline/static/css/style.css
@@ -328,7 +328,7 @@ fieldset {
   justify-content: center; }
   .image-wrapper img {
     padding: 0;
-    max-width: 100vw;
+    max-width: 100%;
     height: auto; }
 
 .post-comments-wrapper {
