--- a/scss/modules/show_post.scss
+++ b/scss/modules/show_post.scss
@@ -31,7 +31,7 @@
     justify-content: center;
     img {
         padding: 0;
-        max-width: 100vw;
+        max-width: 100%;
         height: auto;
     }
 
