--- a/benwaonline/static/css/style.css
+++ b/benwaonline/static/css/style.css
@@ -319,6 +319,8 @@ fieldset {
   .post-info-wrapper h3, .post-info-wrapper h4 {
     margin-top: 15px;
     margin-bottom: 15px; }
+  .post-info-wrapper p {
+    margin: .25rem 0; }
 
 .image-wrapper {
   margin-left: auto;
@@ -357,7 +359,9 @@ fieldset {
     height: auto; }
 
 .like-wrapper {
-  align-self: flex-end; }
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
 
 .post-tags-wrapper {
   margin-left: auto;
@@ -369,16 +373,25 @@ fieldset {
   .post-tags-wrapper h3, .post-tags-wrapper h4 {
     margin-top: 15px;
     margin-bottom: 15px; }
-  .post-tags-wrapper .tags {
+
+.post-tags {
+  display: flex;
+  flex-wrap: wrap; }
+  .post-tags .tag {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between; }
-  .post-tags-wrapper .tag {
-    flex: auto;
-    padding: 0 6px;
+    justify-content: space-evenly;
+    flex: none;
+    margin: .5rem 0;
+    margin-left: 0;
+    margin-right: .5rem;
     border: 1px solid hotpink;
     border-radius: 6px;
     width: auto; }
+    .post-tags .tag a, .post-tags .tag span {
+      padding: 0 .5rem; }
+      @media (min-width: 600px) {
+        .post-tags .tag a, .post-tags .tag span {
+          padding: 0 .7rem; } }
 
 .sidebar-wrapper {
   display: flex;
